Attempted fix to mobile style not showing up

--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ textarea{
     padding-top: 1.25rem;
 }
 
-@media only screen and (max-width: 600px){
+@media screen and (max-width: 800px){
     .site-container p{
         font-size: calc(var(--font-size) * 1.5);
     }
